--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
@@ -25,6 +26,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
