--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
