--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
